--- a/Personal_portfolio_main.html
+++ b/Personal_portfolio_main.html
@@ -1,1 +1,110 @@
-<p>Hello world</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="/Personal_portfolio_style.css" type="text/css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+</head>
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </header>
+    <main>
+        <div id="welcom-section">
+            <h1>Hey, I am Hossein</h1>
+            <h3>A Frontend Developer</h3>
+        </div>
+        <div id="projects">
+            <div class="project_cards">
+                <div calss="card_photo">
+                    <div class="demobox" id="demobox1">1</div>
+                    <!--<img src="/images/Project1.JPG" alt="Project1 - Tribute Page" style="width:500px;height:600px;">-->
+                </div>
+                <div class="card-header">
+                    <h4>Tribute Page</h4>
+                </div>
+                <div class="card-describe">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure debitis temporibus sunt,
+                         commodi pariatur consequatur culpa id omnis soluta laudantium eum labore excepturi, incidunt repudiandae, quam harum inventore officia fugiat.</p>
+                </div>
+                <div class="project_cards">
+                    <div calss="card_photo">
+                        <div class="demobox" id="demobox2">2</div>
+                        <!-- <img src="/images/Project2 - survay form.JPG" alt="Project2 - survay form" style="width:500px;height:600px;"> -->
+                    </div>
+                    <div class="card-header">
+                        <h4>Survay form</h4>
+                    </div>
+                    <div class="card-describe">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure debitis temporibus sunt,
+                        commodi pariatur consequatur culpa id omnis soluta laudantium eum labore excepturi, incidunt repudiandae, quam harum inventore officia fugiat.</p>
+                </div>
+                <div class="project_cards">
+                    <div calss="card_photo">
+                        <div class="demobox" id="demobox3">3</div>
+                        <!--<img src="/images/project3 - Documentation.JPG" alt="project3 - Documentation page" style="width:500px;height:600px;"> -->
+                    </div>
+                    <div class="card-header">
+                        <h4>Documentation page</h4>
+                    </div>
+                    <div class="card-describe">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure debitis temporibus sunt,
+                        commodi pariatur consequatur culpa id omnis soluta laudantium eum labore excepturi, incidunt repudiandae, quam harum inventore officia fugiat.</p>
+                </div>
+                <div class="project_cards">
+                    <div calss="card_photo">
+                        <div class="demobox" id="demobox4">4</div>
+                        <!--<img src="/images/project4 - landing page.JPG" alt="project4 - landing page" style="width:500px;height:600px;">-->
+                    </div>
+                    <div class="card-header">
+                        <h4>landing page</h4>
+                    </div>
+                    <div class="card-describe">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure debitis temporibus sunt,
+                        commodi pariatur consequatur culpa id omnis soluta laudantium eum labore excepturi, incidunt repudiandae, quam harum inventore officia fugiat.</p>
+                </div>
+            </div>
+        </div>
+
+    </main>
+    <footer>
+
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+
+</body>
+</html>
